@@ -150,8 +150,8 @@ const GSList *sp_document_get_resource_list (SPDocument *document, const gchar *
  * Misc
  */
 
-GSList * sp_document_items_in_box (SPDocument *document, NRRect *box);
-GSList * sp_document_partial_items_in_box (SPDocument *document, NRRect *box);
+GSList * sp_document_items_in_box (SPDocument *document, NRRect const *box);
+GSList * sp_document_partial_items_in_box (SPDocument *document, NRRect const *box);
 SPItem * sp_document_item_at_point (SPDocument *document, unsigned int key, double x, double y, gboolean into_groups);
 SPItem * sp_document_group_at_point (SPDocument *document, unsigned int key, double x, double y);
 
