@@ -9,11 +9,11 @@
  * Released under GNU GPL, read the file 'COPYING' for more information
  */
 
-void prefs_set_int_attribute (gchar *path, gchar *attr, gint value);
-gint prefs_get_int_attribute (gchar *path, gchar* attr, gint def);
-gint prefs_get_int_attribute_limited (gchar *path, gchar* attr, gint def, gint min, gint max);
+void prefs_set_int_attribute (gchar const *path, gchar const *attr, gint value);
+gint prefs_get_int_attribute (gchar const *path, gchar const *attr, gint def);
+gint prefs_get_int_attribute_limited (gchar const *path, gchar const *attr, gint def, gint min, gint max);
 
-void prefs_set_double_attribute (gchar *path, gchar *attr, double value);
-double prefs_get_double_attribute (gchar *path, gchar* attr, double def);
-double prefs_get_double_attribute_limited (gchar *path, gchar* attr, double def, double min, double max);
+void prefs_set_double_attribute (gchar const *path, gchar const *attr, double value);
+double prefs_get_double_attribute (gchar const *path, gchar const *attr, double def);
+double prefs_get_double_attribute_limited (gchar const *path, gchar const *attr, double def, double min, double max);
 
